--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
             <li>
               <a href="client.html" class="nav-link">Clients & Partners</a>
             </li>
-            <li><a href="#" class="nav-link">Contact Us</a></li>
+            <li><a href="contact.html" class="nav-link">Contact Us</a></li>
           </ul>
         </div>
 
