Fixed relative paths for images, CSS, and JS

--- a/HTML/client.html
+++ b/HTML/client.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clients & Partners - TGIST</title>
-    <link rel="stylesheet" href="/CSS/client.css" />
-    <link rel="stylesheet" href="/CSS/tgist.css" />
+    <link rel="stylesheet" href="../CSS/client.css" />
+    <link rel="stylesheet" href="../CSS/tgist.css" />
   </head>
   <body class="fade-in">
     <header class="header">
       <nav class="navbar">
         <div class="logo-container">
-          <img src="/Images/TGSITlogo.png" alt="TGSIT Logo" class="logo-icon" />
+          <img src="../Images/TGSITlogo.png" alt="TGSIT Logo" class="logo-icon" />
           <div class="logo-text">
             TGIST<br />
             <small>Beyond Security, Smarter Solution</small><br />
@@ -91,7 +91,7 @@
       <h2>Featured Partners</h2>
       <div class="clients-grid">
         <div class="client-card">
-          <img src="/Images/icb_logo.png" alt="Integrate Commercial" />
+          <img src="../Images/icb_logo.png" alt="Integrate Commercial" />
           <h2>Integrate Commercial</h2>
           <p>
             Partnered with TGIST to strengthen their cybersecurity framework,
@@ -103,7 +103,7 @@
         <!-- Placeholder for future clients -->
         <div class="client-card">
           <img
-            src="/Images/Rye africa.jpg"
+            src="../Images/Rye africa.jpg"
             alt="Future Partner"
             style="opacity: 0.3"
           />
@@ -133,7 +133,7 @@
         <div class="footer-about">
           <div class="logo-container">
             <img
-              src="/Images/TGSITlogo.png"
+              src="../Images/TGSITlogo.png"
               alt="TGSIT Logo"
               class="logo-icon"
             />
