--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TGIST</title>
-    <link rel="stylesheet" href="/CSS/tgist.css" />
-    <link rel="stylesheet" href="/CSS/contact.css" />
+    <link rel="stylesheet" href="../CSS/tgist.css" />
+    <link rel="stylesheet" href="../CSS/contact.css" />
   </head>
   <body>
     <div class="one">
@@ -12,7 +12,7 @@
         <nav class="navbar">
           <div class="logo-container">
             <img
-              src="/Images/TGSITlogo.png"
+              src="../Images/TGSITlogo.png"
               alt="TGSIT Logo"
               class="logo-icon"
             />
@@ -68,16 +68,16 @@
       </section>
       <div class="social-icons">
         <a href="https://facebook.com/tgist" target="_blank">
-          <img src="/Images/facebook-logo-png-38347.png" alt="Facebook" />
+          <img src="../Images/facebook-logo-png-38347.png" alt="Facebook" />
         </a>
         <a href="https://linkedin.com/company/tgist" target="_blank">
-          <img src="/Images/inldln.png" alt="LinkedIn" />
+          <img src="../Images/inldln.png" alt="LinkedIn" />
         </a>
         <a href="https://twitter.com/tgist" target="_blank">
-          <img src="/Images/twitter.jpg" alt="Twitter" />
+          <img src="../Images/twitter.jpg" alt="Twitter" />
         </a>
         <a href="https://instagram.com/tgist" target="_blank">
-          <img src="/Images/insta.jpg" alt="Instagram" />
+          <img src="../Images/insta.jpg" alt="Instagram" />
         </a>
       </div>
       <!-- ////footer/////-->
@@ -86,7 +86,7 @@
           <div class="footer-about">
             <div class="logo-container">
               <img
-                src="/Images/TGSITlogo.png"
+                src="../Images/TGSITlogo.png"
                 alt="TGSIT Logo"
                 class="logo-icon"
               />
