--- a/HTML/about.html
+++ b/HTML/about.html
@@ -3,14 +3,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/about.css" />
-    <link rel="stylesheet" href="/CSS/tgist.css" />
+    <link rel="stylesheet" href="../CSS/about.css" />
+    <link rel="stylesheet" href="../CSS/tgist.css" />
   </head>
   <body>
     <header class="header">
       <nav class="navbar">
         <div class="logo-container">
-          <img src="/Images/TGSITlogo.png" alt="TGSIT Logo" class="logo-icon" />
+          <img src="../Images/TGSITlogo.png" alt="TGSIT Logo" class="logo-icon" />
           <div class="logo-text">
             TGIST<br />
             <small>Beyond Security, Smarter Solution</small><br />
@@ -166,7 +166,7 @@
           <!-- <img src="" alt=""> -->
           <div class="logo-container">
             <img
-              src="/Images/TGSITlogo.png"
+              src="../Images/TGSITlogo.png"
               alt="TGSIT Logo"
               class="logo-icon"
             />
