--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TGIST</title>
-    <link rel="stylesheet" href="/CSS/tgist.css" />
+    <link rel="stylesheet" href="../CSS/tgist.css" />
   </head>
   <body>
     <div class="one">
@@ -11,7 +11,7 @@
         <nav class="navbar">
           <div class="logo-container">
             <img
-              src="/Images/TGSITlogo.png"
+              src="../Images/TGSITlogo.png"
               alt="TGSIT Logo"
               class="logo-icon"
             />
@@ -205,7 +205,7 @@
       <div class="testimonial-carousel">
         <div class="testimonial">
           <img
-            src="/Images/middle-age-woman-smiling-having-good-time.jpg"
+            src="../Images/middle-age-woman-smiling-having-good-time.jpg"
             alt="Client Logo 1"
             class="client-logo"
           />
@@ -218,7 +218,7 @@
 
         <div class="testimonial">
           <img
-            src="/Images/11434204.png"
+            src="../Images/11434204.png"
             alt="Client Logo 2"
             class="client-logo"
           />
@@ -252,7 +252,7 @@
           <!-- <img src="" alt=""> -->
           <div class="logo-container">
             <img
-              src="/Images/TGSITlogo.png"
+              src="../Images/TGSITlogo.png"
               alt="TGSIT Logo"
               class="logo-icon"
             />
@@ -306,6 +306,6 @@
 
       <!-- <a href="#contact" class="floating-contact">Contact Us</a> -->
     </footer>
-    <script src="/JS/tgist.js"></script>
+    <script src="../JS/tgist.js"></script>
   </body>
 </html>
