--- a/HTML/overview.html
+++ b/HTML/overview.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/overview.css">
-    <link rel="stylesheet" href="/CSS/tgist.css">
+    <link rel="stylesheet" href="../CSS/overview.css">
+    <link rel="stylesheet" href="../CSS/tgist.css">
 </head>
 <body>
     <body>
@@ -13,7 +13,7 @@
       <nav class="navbar">
         <div class="logo-container">
           <img
-            src="/Images/TGSITlogo.png"
+            src="../Images/TGSITlogo.png"
             alt="TGSIT Logo"
             class="logo-icon"
           />
