--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=HTML/index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TGIST</title>
     <link rel="stylesheet" href="../CSS/tgist.css" />
