remove - from about us and our mission

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <div class="about-section">
         <div class="about-content">
-          <h2>— ABOUT US</h2>
+          <h2>ABOUT US</h2>
           <p>
             Discover the story behind TGSIT — where innovation meets security.
             Curious about how we make security smarter?
@@ -98,7 +98,7 @@
       <h2 class="overview-title">Overview</h2>
       <!-- Add spacing before Our Mission -->
       <div class="mission-section">
-        <h3 class="mission-title">— Our Mission</h3>
+        <h3 class="mission-title">Our Mission</h3>
 
         <p>
           At TGSIT, protection isn’t just a service — it’s our mission. We
@@ -106,30 +106,8 @@
           empowering businesses to thrive confidently in a digital-first world.
           <br />
           Want to see how we transform challenges into opportunities?
-          <!-- At Group Security and Information Technology, we specialize in
-          multifaceted security solutions tailored to your needs.
-        </p> -->
-          <br />
-          <!-- <p>
-          To provide world-class cybersecurity, technology consulting and
-          managed services through innovation, expertise, and customer-centric
-          delivery.
-        </p> -->
-          <!-- <p>
-          To empower organization with smarter security solutions that extend
-          beyond threat protection and enable business growth, resilience, and
-          digital transformation.
         </p>
-        <p>
-          Our expert team provides managed operations, co-managed services, and
-          consulting to enhance your defense against threats.
-        </p>
-        <p>
-          We offer 24/7 monitoring, incident response, and vulnerability
-          management among other critical services.
-        </p>
-        <br /> -->
-        </p>
+
         <blockquote>Learn More and explore the bigger picture</blockquote>
         <div class="button-wrapper2">
           <a href="/overview.html">
