--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 
     <!-- Hero Section -->
     <section class="about-hero">
-      <h1>— ABOUT US</h1>
+      <h1>ABOUT US</h1>
 
       <p>
         We're more than just a business. We're a team driven by purpose,
