remove - from  our mission

--- a/overview.html
+++ b/overview.html
@@ -44,7 +44,7 @@
     <!-- Mission Section -->
     <section class="mission-section-container">
       <div class="mission-content">
-        <h2 class="mission-title">— Our Mission</h2>
+        <h2 class="mission-title"> Our Mission</h2>
         <p>
           At Group Security and Information Technology, we specialize in multifaceted 
           security solutions tailored to your needs.
